--- a/springcloud/gangbeng/pom.xml
+++ b/springcloud/gangbeng/pom.xml
@@ -10,6 +10,7 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
+		<java.version>1.8</java.version>
 		<!-- 文件拷贝时的编码 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -21,10 +22,14 @@
 
 		<junit.version>4.12</junit.version>
 		<springboot.version>1.5.19.RELEASE</springboot.version>
-		<springboot.plugin.version>2.1.3.RELEASE</springboot.plugin.version>
 		<mysql.jdbc.version>5.1.21</mysql.jdbc.version>
 		<mybatis.starter.version>1.3.3</mybatis.starter.version>
 		<druid.version>1.1.14</druid.version>
+		<metrics.version>3.0.2</metrics.version>
+		<fastjson.version>1.2.56</fastjson.version>
+		<guava.version>27.1-jre</guava.version>
+		<jolokia.version>1.6.0</jolokia.version>
+		<commons-io.version>2.6</commons-io.version>
 	</properties>
 
 	<dependencyManagement>
@@ -60,6 +65,36 @@
 				<version>${druid.version}</version>
 			</dependency>
 
+			<dependency>
+				<groupId>com.codahale.metrics</groupId>
+				<artifactId>metrics-core</artifactId>
+				<version>${metrics.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>${fastjson.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>${guava.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.jolokia</groupId>
+				<artifactId>jolokia-core</artifactId>
+				<version>${jolokia.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>2.6</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
@@ -77,7 +112,23 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>${springboot.plugin.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/lib</outputDirectory>
+							<excludeTransitive>false</excludeTransitive>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
