添加云依赖

--- a/springcloud/gangbeng/pom.xml
+++ b/springcloud/gangbeng/pom.xml
@@ -30,6 +30,7 @@
 		<guava.version>27.1-jre</guava.version>
 		<jolokia.version>1.6.0</jolokia.version>
 		<commons-io.version>2.6</commons-io.version>
+		<springcloud.version>Edgware.SR3</springcloud.version>
 	</properties>
 
 	<dependencyManagement>
@@ -44,6 +45,13 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
 				<version>${springboot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+    			<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${springcloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
