--- a/springcloud/gangbeng/gangbeng-stu/pom.xml
+++ b/springcloud/gangbeng/gangbeng-stu/pom.xml
@@ -83,5 +83,11 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>io.reactivex</groupId>
+			<artifactId>rxjava</artifactId>
+		</dependency>
+
 	</dependencies>
 </project>
