--- a/springcloud/gangbeng/gangbeng-stu/pom.xml
+++ b/springcloud/gangbeng/gangbeng-stu/pom.xml
@@ -89,5 +89,19 @@
 			<artifactId>rxjava</artifactId>
 		</dependency>
 
+
+		<!-- hystrix -->
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-hystrix</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<!-- hystrix -->
 	</dependencies>
 </project>
