--- a/springcloud/gangbeng/pom.xml
+++ b/springcloud/gangbeng/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.ivan.tpp</groupId>
 	<artifactId>gangbeng</artifactId>
@@ -151,7 +150,8 @@
 		<module>gangbeng-gateway</module>
 		<module>gangbeng-core</module>
 		<module>gangbeng-stu</module>
-	</modules>
+    <module>gangbeng-stu-eureka</module>
+  </modules>
 
 	<build>
 		<plugins>
